+ improve verbose/non-verbose output in checkArgus() + return invisible the summary of the results in checkArgus() + use temporary directory for generated files using argument `batchDataDir` in runArgusBatchFile() + improve tests

--- a/inst/tests/Batch/ex1/batch_ex1.arb
+++ b/inst/tests/Batch/ex1/batch_ex1.arb
@@ -1,7 +1,7 @@
 <LOGBOOK> "arguslog_ex1.log"
 <OPENTABLEDATA> "tabdata_ex1.tab"
 <OPENMETADATA> "metadata_ex1.rda"
-<SPECIFYTABLE> "region""gender"|"<freq>"|""|""
+<SPECIFYTABLE> "region""gender"|"freq"|""|""
 <SAFETYRULE> MAN(20)
 <READTABLE>
 <SOLVER> FREE
